// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkButtonLink should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-link"
    data-backpack-ds-component="ButtonLink"
    type="button"
  >
    <span
      class="bpk-link-underlined"
    >
      Link
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with "alternate" attribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-link bpk-link--alternate"
    data-backpack-ds-component="ButtonLink"
    type="button"
  >
    <span
      class="bpk-link-underlined bpk-link-underlined--alternate"
    >
      Link
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with a "className" atribute 1`] = `
<DocumentFragment>
  <button
    class="bpk-link test-class"
    data-backpack-ds-component="ButtonLink"
    type="button"
  >
    <span
      class="bpk-link-underlined"
    >
      Link
    </span>
  </button>
</DocumentFragment>
`;

exports[`BpkButtonLink should render correctly with arbitrary attributes 1`] = `
<DocumentFragment>
  <button
    class="bpk-link"
    data-backpack-ds-component="ButtonLink"
    id="test-id"
    type="button"
  >
    <span
      class="bpk-link-underlined"
    >
      Link
    </span>
  </button>
</DocumentFragment>
`;